# LatticeCore

./: .envrc  .gitignore  CMakeLists.txt  README  README.md  compile_flags.txt
example/: bulk_example.py
include/: lattice.hpp  lattice_core.hpp
src/: bindings.cpp  lattice.cpp  lattice_core.cpp  ptest.cpp
test/: _ptest.pyi  test.py
